--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "life-weeks-visualization",
   "version": "1.0.0",
   "description": "A minimalist life weeks visualization tool following Dieter Rams design philosophy",
+  "homepage": "https://www.echohunter.top/life-weeks",
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
